--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
         href='https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&display=swap' />
   <link rel='stylesheet'
         href='https://fonts.googleapis.com/css2?family=Ubuntu:wght@200;300;400;500;600;700&display=swap' />
+  <script type="module" crossorigin src="/assets/index.js"></script>
+  <link rel="stylesheet" href="/assets/index.css">
 </head>
 
 <body>
 <noscript>You need to enable Javascript to run this application.</noscript>
 <div id='root'></div>
-<script type='module' src='/src/main.tsx'></script>
+
 </body>
 
 </html>
